@@ -254,6 +254,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 16754) Making arbitrary rows of sortable tables sticky:
   |- class="unsortable"
 * (bug 16617) Add "talk" link to list of templates in edit mode
+* Show subversion too even if a "normal" version number is available
 
 === Bug fixes in 1.14 ===
 
